# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.73 2004/07/21 05:03:42 zhen Exp $

  21 Jul 2004; John Davis <zhen@gentoo.org> +livecd/files/gamecd-xinitrc,
  +livecd/files/gamecd.motd.txt, +livecd/files/generic-motd.txt,
  +livecd/files/livecd-bash_profile, +livecd/files/livecd-local.start,
  -livecd/files/livecd-rclocal, +livecd/files/minimal.motd.txt,
  -livecd/files/motd.txt, +livecd/files/universal.motd.txt,
  livecd/runscript/default-runscript.sh, livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  modules/livecd_stage2_target.py:
  addition of wolf31o2's gamecd patchset. untested, so please beware

  14 Jul 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh,
  modules/generic_stage_target.py, modules/livecd_stage2_target.py:
  fixed a bug for livecd-stage2. somehow, the inheritance got mucked up and the
  livecds were not cleaning out livecd/empty livecd/rm etc. I moved the code for
  this out of generic_stage_target and into livecd-stage2 since the
  livecd-stage2 class was overriding generic_stage_target for cleaning anyway.

  13 Jul 2004; <zhen@gentoo.org> livecd/runscript-support/livecdfs-update.sh:
  changed the behavior of rcadd/ rcdel. it was getting hokey to have to add the
  default rc'ed programs when only one change was required to rcadd. so I
  changed it so that the defaults are *always* loaded and specified additions/
  deletions are just added on top of those.

  12 Jul 2004; John Davis <zhen@gentoo.org> catalyst,
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/tinderbox/tinderbox-chroot.sh:
  changing the more verbose behavior to the -V (verbose) flag

  12 Jul 2004; <zhen@gentoo.org> catalyst,